package poo.uniquindio.edu.co.Homa.enums;
public enum Estado {
    ACTIVO,
    ELIMINADO
}