package poo.uniquindio.edu.co.Homa.enums;

public enum Rol {
    Huesped,
    Anfitrion
}