package poo.uniquindio.edu.co.Homa.enums;
public enum Servicio {
    PISCINA,
    DESAYUNO,
    AIRE_ACONDICIONADO,
    WIFI,
    ESTACIONAMIENTO
}