package co.edu.uniquindio.homa.model.enums;

public enum EstadoReserva {
    CANCELADA,
    COMPLETADA,
    CONFIRMADA,
    PENDIENTE
}
