@startuml DiagramaClases
' --- Opciones de estilo ---
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor<<enum>> Silver
  BorderColor Black
}

' --- Enumeraciones ---
enum EstadoReserva {
  CANCELADO
  COMPLETADO
  CONFIRMADO
  PENDIENTE
  label : String
}

enum Estado {
  INACTIVO
  ACTIVO
}

enum ServicioTipo {
  PISCINA
  DESAYUNO
  AIRE_ACONDICIONADO
  WIFI
  ESTACIONAMIENTO
}

enum Rol {
  ANFITRION
  HUESPED
  ADMIN
}

' --- Clases principales ---
class Reserva {
  +id : Long
  +fechaEntrada : LocalDateTime
  +fechaSalida : LocalDateTime
  +creadoEn : LocalDateTime
  +cantidadHuespedes : int
  +precio : float
  +estado : EstadoReserva
  +alojamiento : Alojamiento
  +huesped : Usuario
}

class Alojamiento {
  +id : Long
  +titulo : String
  +descripcion : String
  +direccion : Direccion
  +localización : Localización
  +maxHuespedes : int
  +creadoEn : LocalDateTime
  +precioPorNoche : float
  +imagenes : List<String>
  +estado : Estado
  +servicios : Set<Servicio>
  +anfitrion : Usuario
}

class Usuario {
  +id : Long
  +nombre : String
  +email : String
  +contrasena : String
  +telefono : String
  +fotoUrl : String
  +fechaNacimiento : LocalDate
  +creadoEn : LocalDateTime
  +estado : Estado
  +rol : Rol
  +esAnfitrion : boolean
}

class PerfilAnfitrion {
  +id : Long
  +documentoLegal : String
  +sobreMi : String
  +usuario : Usuario
}

class CodigoRestablecerContrasena {
  +id : Long
  +codigo : String
  +creadoEn : LocalDateTime
  +usuario : Usuario
}

class Reseña {
  +id : Long
  +calificacion : int
  +comentario : String
  +creadoEn : LocalDateTime
  +usuario : Usuario
  +alojamiento : Alojamiento
  +respuesta : Respuesta
}

class Respuesta {
  +mensaje : String
  +respondidoEn : LocalDateTime
}

class Direccion {
  +ciudad : String
  +direccion : String
  +localización : Localización
}

class Localización {
  +latitud : float
  +longitud : float
}

class Servicio {
  +nombre : String
  ' valores en ServicioTipo (enum)
}

Alojamiento "1" *-- "*" Reserva : reservas

Reserva "*" *-- "1" Usuario : huesped

Alojamiento "1" *-- "*" Servicio : servicios

Alojamiento "*" *-- "1" Usuario : anfitrion

Alojamiento "1" *-- "1" Direccion : anfitrion

Usuario "1" --* "0..1" PerfilAnfitrion : perfil

Usuario "1" --* "0..1" CodigoRestablecerContrasena : codigoRestablecimiento

Alojamiento "1" *-- "*" Reseña : reseñas

Reseña "*" *-- "1" Usuario : autor

Reseña "1" *-- "*" Respuesta : respuesta

Direccion "1" *-- "1" Localización : localización

Usuario .. Rol
Usuario .. Estado

Alojamiento .. Estado
Servicio .. ServicioTipo

Reserva .. EstadoReserva

@enduml
